# handler/user/create.go
@@ -16,9 +16,10 @@ import (
 // @Tags user
 // @Accept  json
 // @Produce  json
+// @Param Authorization header string true "Token"
 // @Param user body user.CreateRequest true "Create a new user"
 // @Success 200 {object} user.CreateResponse "{"code":0,"message":"OK","data":{"username":"kong"}}"
-// @Router /user [post]
+// @Router /v1/user [post]
 func Create(c *gin.Context) {
 	log.Info("User Create function called.", lager.Data{"X-Request-Id": util.GetReqID(c)})
 	var r CreateRequest
