# handler/user/login.go
@@ -12,8 +12,7 @@ import (
 
 // @Summary Login generates the authentication token
 // @Produce  json
-// @Param username body string true "Username"
-// @Param password body string true "Password"
+// @Param user body model.UserModel true "login"
 // @Success 200 {string} model.Token "{"code":0,"message":"OK","data":{"token":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1MjgwMTY5MjIsImlkIjowLCJuYmYiOjE1MjgwMTY5MjIsInVzZXJuYW1lIjoiYWRtaW4ifQ.LjxrK9DuAwAzUD8-9v43NzWBN7HXsSLfebw92DKd1JQ"}}"
 // @Router /login [post]
 func Login(c *gin.Context) {
