# handler/user/update.go
@@ -17,10 +17,11 @@ import (
 // @Tags user
 // @Accept  json
 // @Produce  json
+// @Param Authorization header string true "Token"
 // @Param id path uint64 true "The user's database id index num"
 // @Param user body model.UserModel true "The user info"
 // @Success 200 {object} handler.Response "{"code":0,"message":"OK","data":null}"
-// @Router /user/{id} [put]
+// @Router /v1/user/{id} [put]
 func Update(c *gin.Context) {
 	log.Info("Update function called.", lager.Data{"X-Request-Id": util.GetReqID(c)})
 	// Get the user id from the url parameter.
